--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   google_mobile_ads: ^3.1.0
   update_available: ^3.0.0
   awesome_dialog: ^3.1.0
+  get_it: ^7.6.4
+  launch_review: ^3.0.1
 
 
 dev_dependencies:
