--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,13 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   country_calling_code_picker: ^2.0.1
-  share_to_whatsapp: ^0.0.2
+  whatsapp_share2:
+    git:
+      url: https://github.com/DevloperAnuj/whatsapp_share_wato.git
   file_picker: ^6.0.0
   chips_choice: ^3.0.1
   path: ^1.8.3
+  path_provider: ^2.1.1
   easy_splash_screen: ^1.0.4
   google_mobile_ads: ^3.1.0
   update_available: ^3.0.0
