--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   awesome_dialog: ^3.1.0
   get_it: ^7.6.4
   launch_review: ^3.0.1
+  qr_bar_code_scanner_dialog: ^0.0.5
 
 
 dev_dependencies:
