--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+2
+version: 1.1.0+4
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -34,18 +34,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   country_calling_code_picker: ^2.0.1
-  whatsapp_share2:
-    git:
-      url: https://github.com/DevloperAnuj/whatsapp_share_wato.git
-  open_share_plus: ^1.2.0
   file_picker: ^6.0.0
   chips_choice: ^3.0.1
-  path: ^1.8.3
-  path_provider: ^2.1.1
   easy_splash_screen: ^1.0.4
   google_mobile_ads: ^3.1.0
   update_available: ^3.0.0
@@ -57,6 +51,7 @@ dependencies:
   screenshot: ^2.1.0
   permission_handler: ^11.0.1
   image_gallery_saver: ^2.0.3
+  logger: ^2.0.2+1
 
 
 dev_dependencies:
