--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+4
+version: 1.1.2+5
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -43,6 +43,7 @@ dependencies:
   easy_splash_screen: ^1.0.4
   google_mobile_ads: ^3.1.0
   update_available: ^3.0.0
+  flutter_launch_store: ^1.0.4
   awesome_dialog: ^3.1.0
   get_it: ^7.6.4
   launch_review: ^3.0.1
