--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.6+12
+version: 1.2.8+14
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -53,6 +53,7 @@ dependencies:
   permission_handler: ^11.0.1
   image_gallery_saver: ^2.0.3
   logger: ^2.0.2+1
+  firebase_core: ^2.20.0
 
 
 dev_dependencies:
