--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.8+14
+version: 1.2.9+16  #Activate firebase_analytics: ^10.6.3
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -37,29 +37,31 @@ dependencies:
 
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  country_calling_code_picker: ^2.0.1
-  file_picker: ^6.0.0
+  country_calling_code_picker: any
+#  file_picker: ^6.0.0
   chips_choice: ^3.0.1
   easy_splash_screen: ^1.0.4
-  google_mobile_ads: ^3.1.0
+  google_mobile_ads: ^5.2.0
   update_available: ^3.0.0
-  flutter_launch_store: ^1.0.4
+#  flutter_launch_store: any
+  store_launcher_plus: ^1.0.4
   awesome_dialog: ^3.1.0
-  get_it: ^7.6.4
+  get_it: ^8.0.3
   launch_review: ^3.0.1
   qr_bar_code_scanner_dialog: ^0.0.5
   qr_flutter: ^4.1.0
-  screenshot: ^2.1.0
+  screenshot: ^3.0.0
   permission_handler: ^11.0.1
   image_gallery_saver: ^2.0.3
   logger: ^2.0.2+1
-  firebase_core: ^2.20.0
+  firebase_core: ^3.9.0
+  firebase_analytics: ^11.3.6
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.13.1"
+  flutter_launcher_icons: ^0.14.2
 
 
 flutter_launcher_icons:
